# ImageEvo

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  Geometry.hpp  Main.cpp
src/ellipses_cpu/: CMakeLists.txt  geometry.hpp  main.cpp
src/ellipses_gpu/: CMakeLists.txt  ellipse.cu  ellipse.h  geometry.hpp  main.cpp  stb_wrapper.cpp
src/image_gpu/: CMakeLists.txt  common.h  main.cpp  renderer.cpp  renderer.h  shader.h  shader.hpp  shader.vs  stb_wrapper.cpp
src/prototype/: CMakeLists.txt  geometry.hpp  main.cpp
src/triangles_gpu/: CMakeLists.txt  renderer.h  shader.fs
